# usflib

./: .gitignore  .travis.yml  LICENSE  README.md
include/: single_header.cmake  single_header_builder.bat
include/usf/: usf.hpp
include/usf/develop/: usf_arg_custom_type.hpp  usf_arg_format.hpp  usf_argument.hpp  usf_config.hpp  usf_float.hpp  usf_integer.hpp  usf_main.hpp  usf_string_span.hpp  usf_string_view.hpp  usf_traits.hpp
unit_tests/: CMakeLists.txt
unit_tests/include/: doctest.h  unit_tests_config.hpp
unit_tests/source/: unit_tests.cpp  unit_tests_basic_types.cpp  unit_tests_benchmarks.cpp  unit_tests_custom_types.cpp  unit_tests_floating_point.cpp  unit_tests_format_spec.cpp  unit_tests_positional_args.cpp
